maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:82: error: ';' expected but 'if' found.
  }if(ici - getIndication(x-1,y)>0){
   ^